carousel overflow fix

--- a/src/pages/Homepage/Carousel.module.css
+++ b/src/pages/Homepage/Carousel.module.css
@@ -12,6 +12,7 @@
 }
 
 .carouselContainer {
+  padding: 0 3rem;
 }
 
 .CarouselComponent {
